change html file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="//fdn.fontcdn.ir" />
-    <link rel="preconnect" href="//v1.fontapi.ir" />
-    <link href="https://v1.fontapi.ir/css/VazirFD:100" rel="stylesheet" />
     <title>درخواست های جاری</title>
   </head>
   <body>
